--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nucleus es una revolucionaria aplicación de gestión de dinero, diseñada para ofrecer una plataforma segura y accesible para todas tus necesidades financieras. Permite a los usuarios administrar su dinero de manera eficiente, realizar transacciones y compras con comisiones excepcionalmente bajas. Destaca por su interfaz intuitiva, la cual facilita la monitorización de gastos y ahorros, y proporciona herramientas personalizadas para optimizar tus finanzas. Su capacidad para realizar transacciones rápidas y seguras la convierte en una opción ideal para aquellos que buscan un servicio financiero moderno y cómodo. Con Nucleus, el control total de tu dinero está literalmente al alcance de tu mano.">
+    <meta name="description" content="Billetera digital con amplias funcionalidades. Realiza compras, gestiona transacciones fácilmente y disfruta de bajas comisiones. Tu dinero seguro y accesible.">
     <title>Nucleus - eWallet </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
